--- a/hex-grid-app/pyproject.toml
+++ b/hex-grid-app/pyproject.toml
@@ -9,10 +9,12 @@ packages = [{include = "hex_grid_app"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 invoke = "^2.0.0"
+pygame = "^2.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
+coverage = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core"]
